# jobtify

./: Crawl_Function.py  Incruit.py  JobKorea.py  Jobtify_crawling.py  Jumpit.py  LICENSE  README.md  Rallit.py  Saramin.py  wanted.py
Crawling/: Crawl_Function.py  Incruit.py  JobKorea.py  Jobtify_crawling.py  Jumpit.py  README.md  Rallit.py  Saramin.py  requirements.txt  wanted.py
front/: package-lock.json  package.json  tailwind.config.js
front/front/: package-lock.json  package.json  tailwind.config.js
front/front/public/: index.html
front/front/src/: App.js  index.js
front/front/src/pages/: LoginPage.js
front/front/src/pages/MainPage/: Header.js  MainPage.js
front/public/: index.html
front/src/: App.js  App.jsx  index.js
front/src/components/: Chip.js  Chip.jsx  DropDown.js  DropDown.jsx  Location.js  Location.jsx  Modal.js  ModalPortal.js
front/src/pages/: LoginPage.js  NotFound.js
front/src/pages/AddFilter/: AddFilter.js  AddFilter.jsx  FilterHeader.js  Keyword.js  Keyword.jsx
front/src/pages/Auth/Login/: LoginPage.js  LoginPage.jsx
front/src/pages/Auth/SignUp/: AfterSignup.js  SignUpPage.js  SignUpPage.jsx
front/src/pages/MainPage/: Header.js  HeaderDropdown.js  HeaderDropdown.jsx  MainPage.js  MainPage.jsx
front/src/pages/MainPage/NoticeList/: NoticeList.js  NoticeListItem.js  NoticeListItem.jsx  NoticeListSaved.js  NoticeListSaved.jsx  (+2 more)
front/src/styles/: styles.css  tailwind.css
front/src/util/: Firebase.js  atom.js
server/: app.py  init_firebase.py  pyproject.toml  requirements.txt
server/config/: settings.py
(+8 files in other folders)
